[project]
name = "fast-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Felipe Silva",email = "felipeosilva@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "databases[aiosqlite] (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
